# toy_efficiency

./: CMakeLists.txt
src/: toy_efficiency.cc
